got the ng tabs working

--- a/src/app/content-page/content-page.component.html
+++ b/src/app/content-page/content-page.component.html
@@ -1,23 +1,19 @@
-<div class="tabs">
-    <button (click)="displayingPosts('User')">User Posts</button>
-    <button (click)="displayingPosts('Other')">Other Posts</button>
-</div>
-<div *ngIf="personalPostBoolean">
-    <div *ngFor="let upost of userPosts">
-        <mat-card class="mat-card-class"> 
-            <mat-card-title class="mat-card-title-class">{{upost.title}}</mat-card-title>
-            <mat-card-content>
-                <p>
-                    {{upost.body}}
-                </p>
-            </mat-card-content>
-        </mat-card>
-    </div>
-</div>
-<div *ngIf="!personalPostBoolean">
-    <div *ngFor="let opost of otherPosts">
+<mat-tab-group mat-align-tabs="start">
+    <mat-tab label="User Posts">
+        <div *ngFor="let upost of userPosts">
+            <mat-card class="mat-card-class"> 
+                <mat-card-title class="mat-card-title-class">{{upost.title}}</mat-card-title>
+                <mat-card-content>
+                    <p>
+                        {{upost.body}}
+                    </p>
+                </mat-card-content>
+            </mat-card>
+        </div>
+    </mat-tab>
+    <mat-tab label="Other Posts"> 
+        <div *ngFor="let opost of otherPosts">
         <mat-card class="mat-card-class">
-            <!-- <mat-card-title>{{gettingUserName(opost)}}</mat-card-title> -->
             <mat-card-title class="username-on-cards">{{allUserInfo[opost.userId-1].name}}</mat-card-title>
             <mat-card-subtitle class="mat-card-title-class">{{opost.body}}</mat-card-subtitle>
             <mat-card-content>
@@ -26,5 +22,6 @@
                 </p>
             </mat-card-content>
         </mat-card> 
-    </div>
-</div>
+        </div>
+    </mat-tab>
+</mat-tab-group>
