--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,5 +1,5 @@
 <div class="login-page">
     <h1>Login Page</h1>
-    <input id="login-textbox" [(ngModel)]="email" type="email" (keyup.enter)="tempButton()">
+    <input id="login-textbox" [(ngModel)]="email" type="email" placeholder="Email Address" (keyup.enter)="tempButton()">
     <button id="login-button" (click)="tempButton()">Log in</button>
 </div>
